fix text align

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,13 @@ button.custom-prev-one {
   position: relative !important;
   left: 0;
   top: 2.5rem;
+  width: 25rem !important;
+  margin-left:.5rem !important ;
+  /* right: 6rem !important; */
+}
+
+.right-side-text{
+    width: 25rem;
 }
 .form-indicators div {
   border-radius: 50% !important;
